...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Reservations" image="Reservations" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="reservationsTableView" destination="0ZU-qB-6dX" id="iE3-3e-RFq"/>
...
                                    <constraint firstAttribute="height" constant="60" id="tgO-OD-QK4"/>
                                </constraints>
                                <state key="normal" image="NextArrow">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="384" height="42"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2q-2J-xE9">
                                                <rect key="frame" x="0.0" y="0.0" width="384" height="17"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="76.999999999999972" width="384" height="42"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66x-Rr-ag7">
                                                <rect key="frame" x="0.0" y="0.0" width="384" height="17"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="19" width="384" height="23"/>
                                                <subviews>
                                                    <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="MM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJD-CS-tnh">
                                                        <rect key="frame" x="0.0" y="0.0" width="32" height="23"/>
                                                        <constraints>
...
        <scene sceneID="Akv-LJ-ThC">
            <objects>
                <viewController storyboardIdentifier="VehicleInformationViewController" title="Vehicle Information" id="R2d-aa-8Z1" customClass="VehicleInformationViewController" customModule="OpenSpot" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="NJk-dh-CbP" customClass="IQPreviousNextView" customModule="IQKeyboardManagerSwift">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                    <constraint firstAttribute="width" constant="60" id="ka7-HV-WbH"/>
                                </constraints>
                                <state key="normal" image="Check"/>
                                <connections>
                                    <action selector="finishClicked:" destination="R2d-aa-8Z1" eventType="touchUpInside" id="quw-29-h6e"/>
...
                    </view>
                    <connections>
                        <outlet property="color" destination="F7g-Fm-zBt" id="V4O-X8-KHB"/>
                        <outlet property="license" destination="jrL-xP-J73" id="5Nq-xd-1Vg"/>
                        <outlet property="make" destination="A1w-MR-j4s" id="Wcf-at-nBh"/>
                        <outlet property="model" destination="hqN-RN-VFc" id="S5S-Y4-9gC"/>
                        <outlet property="skipButton" destination="1aU-3C-Rbg" id="X5z-oO-xed"/>
                        <outlet property="state" destination="cSm-D0-MRJ" id="6kf-WT-N6z"/>
                    </connections>
                </viewController>
...
                        <viewLayoutGuide key="safeArea" id="bV8-VX-d8s"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="nhf-UY-JWt"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="4" minValue="0.5" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="pAQ-FI-v5f">
                                                        <rect key="frame" x="48" y="0.0" width="328" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" label="priceSlider"/>
                                                        <connections>
                                                            <action selector="priceSlider:" destination="oUj-VZ-tBa" eventType="valueChanged" id="T2l-7f-MQK"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="165" height="29"/>
                                                        <segments>
                                                            <segment title="Inactive"/>
                                                            <segment title="Active"/>
                                                        </segments>
                                                    </segmentedControl>
...
                                    <constraint firstAttribute="width" constant="60" id="sWo-57-WQN"/>
                                </constraints>
                                <state key="normal" title="Button" image="Check"/>
                                <connections>
                                    <action selector="finishClicked:" destination="oUj-VZ-tBa" eventType="touchUpInside" id="lTC-OB-ScT"/>
...
                                <color key="backgroundColor" red="0.61568627450000002" green="0.60392156860000001" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Book Now">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="yFM-LC-QJN"/>
                    </view>
                    <navigationItem key="navigationItem" title="Confirm Booking" id="lfc-Ju-xb5"/>
                    <connections>
                        <outlet property="bookDrivewayButton" destination="354-jv-oSb" id="eX9-5h-qn1"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C5i-1g-UlF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="Parking" id="6Xx-47-bsp"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="98x-T2-ZpU">
...
