...
    var passCarIndex = 0
    var cameFromVehicleMenu = false
    let db = Firestore.firestore()
    let currentUser = Auth.auth().currentUser
    let validator = Validator()
    
    let statesArr = ["-SELECT-","Alaska", "Alabama", "Arkansas", "American Samoa", "Arizona", "California", "Colorado", "Connecticut","District of Columbia","Delaware", "Florida", "Georgia", "Guam","Hawaii", "Iowa", "Idaho", "Illinois", "Indiana", "Kansas", "Kentucky", "Louisiana","Massachusetts", "Maryland", "Maine", "Michigan", "Minnesota", "Missouri", "Mississippi", "Montana", "North Carolina",
    
    var makeArr = ["-SELECT-","Acura", "Alfa Romeo", "Aston Martin", "Audi",  "Bentley", "BMW", "Buick", "Cadillac", "Chevrolet", "Chrysler", "Dodge","Ferrari", "FIAT","Ford","Freightliner","Genesis","GMC","Honda", "Hyundai","INFINITI","Jaguar","Jeep","Kia","Lamborghini","Land Rover","Lexus","Lincoln","Lotus", "Maserati","MAZDA","McLaren","Mercedes-Benz","MINI","Mitsubishi","Nissan","Porsche","Ram
    
    
    var colorsArr = ["-SELECT-","Black","Blue","Brown","Gold","Green","Red","Silver", "White", "Yellow"]
    
    var carDict: [String: [String]] = ["-SELECT-": ["-SELECT-"],
                                       "Acura": ["-SELECT-","ILX", "MDX", "MDX Sport Hybrid", "NSX", "RDX", "RLX", "RLX Sport Hybrid", "TLX"],
                                       "Alfa Romeo": ["-SELECT-","4C", "4C Spider", "Giulia", "Stelvio"],
                                       "Aston Martin": ["-SELECT-","DB11", "Vanquish S"],
                                       "Audi": ["-SELECT-","A3", "A3 Sportback e-tron", "A4", "A4 allroad", "A5", "A6", "A7", "A8", "e-tron", "Q3", "Q5", "Q7", "Q8", "R8", "RS 3", "RS 5", "RS 7", "S3", "S4", "S5", "S6", "S7", "S8", "SQ5", "TT"],
                                       "Bentley": ["-SELECT-","Bentayga", "Continental", "Flying Spur", "Mulsanne"],
                                       "BMW": ["-SELECT-","2 Series", "3 Series", "4 Series", "5 Series", "6 Series", "7 Series", "i3", "i8", "M2", "M3", "M4", "M5", "M6", "X1", "X2", "X3", "X4", "X5", "X5 M", "X6", "X6 M"],
                                       "Buick": ["-SELECT-","Cascada", "Enclave", "Encore", "Envision", "LaCrosse", "Regal Sportback", "Regal TourX"],
                                       "Cadillac": ["-SELECT-","ATS", "ATS-V", "CT6", "CTS", "CTS-V", "Escalade", "Escalade ESV", "XT4", "XT5", "XTS"],
                                       "Chevrolet": ["-SELECT-","Blazer", "Bolt EV", "Camaro", "City Express", "Colorado Crew Cab", "Colorado Extended Cab", "Corvette", "Cruze", "Equinox", "Express 2500 Cargo", "Express 2500 Passenger", "Express 3500 Cargo", "Express 3500 Passenger", "Impala", "Malibu", "Silverado 1500 Crew Cab", "Silverado 1500 Double Cab", "Silverado 1500 LD Double Cab", "Silver
                                       "Chrysler": ["-SELECT-","300", "Pacifica", "Pacifica Hybrid"],
...
