...
    case Support
    case signOut
    
    var description: String {
        switch self {
        case .Person: return "Loading name"
        case .Driveway: return "List your driveway"
        case .Payment: return "Payment"
        case .Vehicle: return "Vehicle"
        case .Support: return "Contact us"
        case .signOut: return "Log out"
        }
    }
...
